--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [dependencies]
 rinf = "7.3.1"
 prost = "0.13.0"
-tokio = { version = "1", features = ["rt", "macros"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.8.1", features = ["rt", "macros"] }
