Some tests with dialogs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   rinf: ^7.3.1
   protobuf: ^3.1.0
+  file_picker: ^10.0.0
 
 dev_dependencies:
   flutter_test:
