--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -11,10 +11,17 @@ edition = "2021"
 # `staticlib` is for iOS and macOS.
 crate-type = ["lib", "cdylib", "staticlib"]
 
+[lints.clippy]
+unwrap_used = "deny"
+expect_used = "deny"
+wildcard_imports = "deny"
+
 [dependencies]
-rinf = "7.3.1"
-prost = "0.13.0"
+rinf = "8.0.0"
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
+async-trait = "0.1.87"
+messages = "0.3.1"
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.8.1", features = ["rt", "macros"] }
