--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  rinf: ^7.3.1
-  protobuf: ^3.1.0
+  rinf: ^8.0.0
+  tuple: ^2.0.2
+  meta: ^1.16.0
   file_picker: ^10.0.0
 
 dev_dependencies:
